exports[`Storyshots Test  Without props 1`] = `
<span>
  <button
    className="terra-Test terra-Test--default"
    onClick={[Function]}>
    Terra, 
    default
  </button>
</span>
`;

exports[`test should render a default component 1`] = `
<button
  className="terra-Test terra-Test--default"
  onClick={[Function]}>
  Terra, 
  default
</button>
`;

exports[`test should render a primary component 1`] = `
<button
  className="terra-Test terra-Test--primary"
  onClick={[Function]}>
  Terra, 
  primary
</button>
`;

exports[`test should toggle the class u-selected on default 1`] = `
<button
  className="terra-Test terra-Test--default"
  onClick={[Function]}>
  Terra, 
  default
</button>
`;

exports[`test should toggle the class u-selected on default 2`] = `
<button
  className="terra-Test terra-Test--default u-selected"
  onClick={[Function]}>
  Terra, 
  default
</button>
`;

exports[`test should toggle the class u-selected on default 3`] = `
<button
  className="terra-Test terra-Test--default"
  onClick={[Function]}>
  Terra, 
  default
</button>
`;

exports[`test should toggle the class u-selected on primary 1`] = `
<button
  className="terra-Test terra-Test--primary"
  onClick={[Function]}>
  Terra, 
  primary
</button>
`;

exports[`test should toggle the class u-selected on primary 2`] = `
<button
  className="terra-Test terra-Test--primary u-selected"
  onClick={[Function]}>
  Terra, 
  primary
</button>
`;

exports[`test should toggle the class u-selected on primary 3`] = `
<button
  className="terra-Test terra-Test--primary"
  onClick={[Function]}>
  Terra, 
  primary
</button>
`;
